* Fixed idle handling to eliminate a hang where a thread was stuck waiting for itself to exit  during stacking (#1665)
* Fixed potential thread safety issues setting environment variables
* Fixed issues with updating the script repository - no longer cloned with depth=1
* Fixed handling of star cluster names containing * characters

**Improvements**
* Removed legacy GraXpert interface to be replaced by the new GraXpert-AI.py script (#1620, #1611, #1573)
* Allow saving plots to files using sirilpy.connection.SirilInterface.xy_plot() (#1670)
* Filechoosers in the calibration tab and calibration preferences remember the last directory (#1664)
* Updated overlay_add_polygon() to use shared memory, to handle polygons with large numbers of sides
* Improved compatibility of sirilpy.tkfilebrowser with tkinter.filedialog (allows replacing the awful Linux tk filedialog)
* Improved the GPU module helper methods in sirilpy
* Fix a crash with RGB compositing (#1562)

siril 1.4.0-beta2
05/21/25

**Fixes:**
* Fixed option -weight= for stack command and add filtering criteria in HISTORY key of stacked image (#1545)
* Fixed crash and slowness when refreshing the scripts list (#1548, #1574)
* Python scripts are now sorted alphabetically (#1559)
* Fixed crash in Noise Reduction with Independent Channels option selected (#1567)
* Fixed UI hang when manually refreshing scripts or SPCC (#1566)
* Fixed incorrect behaviour when using set_image_pixeldata to chage the number of channels (#1570)
* Fixed incorrect siril command return values (#1569)
* Fixed crash in astrometric registration when the reference image could not be platesolved (#1557)
* Fixed preventing max framing export in seqapplyreg with FITSEQ or SER (#1561)
* Fixed obscode that was not exported in the AAVSO csv (#1577)
* Removed graxpert_deconv from the command line (#1575)
* Fixed SPCC failing to open files on Windows when the filepath contains non-ASCII characters (e.g., accented characters) (#1584)