@@ -187,6 +187,7 @@ gchar *find_file_in_directory(gchar *basename, const gchar *path);
 gchar *find_file_recursively(gchar *basename, const gchar *top_path);
 char *strdupnullok(char *data);
 gchar* remove_extension_from_path(const gchar* filepath);
+gboolean delete_directory(const gchar *dir_path, GError **error);
 
 /****************** quantize.h ***************/
 int siril_fits_img_stats_ushort(WORD *array, long nx, long ny,
